channel Page UI fixes

--- a/src/App.css
+++ b/src/App.css
@@ -275,6 +275,9 @@ aside {
     min-width: 270px;
     height: 200px;
   }
+  .channle-img {
+    height: 170px !important;
+  }
 }
 
 @media screen and (max-width: 2600px) {
@@ -525,6 +528,9 @@ aside {
 @media screen and (max-width: 1000px) {
   .AdminBarLogo {
     display: none;
+  }
+  .ended-channel {
+    top: -40px;
   }
   .nav-sider {
     border: 0px;
@@ -901,6 +907,9 @@ aside {
 @media screen and (max-width: 769px) {
   .main-profile-img {
     margin: auto;
+  }
+  .ended-channel {
+    top: -50px;
   }
   .Edit-container {
     display: flex;
