--- a/src/App.css
+++ b/src/App.css
@@ -1006,8 +1006,7 @@ aside {
   }
   .right-side {
     width: 100%;
-    height: 100vh;
-    background-color: white;
+    height: 100vh !important;
   }
 
   /* .banner-Buttons{
@@ -1871,6 +1870,10 @@ aside {
 
     margin-left: 20px;
     padding: 0;
+  }
+  .signup h1 {
+    width: 80% !important;
+    font-size: 26px !important;
   }
   .contain-card {
     width: 100vw;
