--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,9 @@ div {
   background-color: #0f3057 !important;
   box-shadow: 0 0 1px #000000 !important;
 }
+.css-6hp17o-MuiList-root-MuiMenu-list {
+  background-color: #0f3057 !important;
+}
 .App {
   width: 100vw;
   height: 100vh;
