--- a/src/App.css
+++ b/src/App.css
@@ -20,11 +20,21 @@ div {
 .crisp-client .cc-tlyw[data-full-view="true"] .cc-kxkl .cc-nsge .cc-imbb {
   display: block !important;
 }
-.css-3dzjca-MuiPaper-root-MuiPopover-paper-MuiMenu-paper {
+.MuiPaper-root
+  .MuiPaper-elevation
+  .MuiPaper-rounded
+  .MuiPaper-elevation8
+  .MuiPopover-paper
+  .MuiMenu-paper
+  .MuiMenu-paper
+  .css-3dzjca-MuiPaper-root-MuiPopover-paper-MuiMenu-paper {
   background-color: #0f3057 !important;
   box-shadow: 0 0 1px #000000 !important;
 }
-.css-6hp17o-MuiList-root-MuiMenu-list {
+.MuiList-root
+  .MuiList-padding
+  .MuiMenu-list
+  .css-6hp17o-MuiList-root-MuiMenu-list {
   background-color: #0f3057 !important;
 }
 .App {
