--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,8 @@ div {
 .MuiList-root
   .MuiList-padding
   .MuiMenu-list
-  .css-6hp17o-MuiList-root-MuiMenu-list {
+  .css-6hp17o-MuiList-root-MuiMenu-list
+  .css-r8u8y9 {
   background-color: #0f3057 !important;
 }
 .App {
