--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,8 @@ div {
   .css-6hp17o-MuiList-root-MuiMenu-list
   .css-r8u8y9 {
   background-color: #0f3057 !important;
+  padding-top: 0px !important;
+  padding-bottom: 0px !important;
 }
 .App {
   width: 100vw;
