--- a/src/App.css
+++ b/src/App.css
@@ -31,14 +31,13 @@ div {
   background-color: #0f3057 !important;
   box-shadow: 0 0 1px #000000 !important;
 }
-.MuiList-root
-  .MuiList-padding
-  .MuiMenu-list
-  .css-6hp17o-MuiList-root-MuiMenu-list
-  .css-r8u8y9 {
+.css-6hp17o-MuiList-root-MuiMenu-list {
   background-color: #0f3057 !important;
   padding-top: 0px !important;
   padding-bottom: 0px !important;
+}
+.css-r8u8y9 {
+  background-color: #0f3057 !important;
 }
 .App {
   width: 100vw;
