--- a/src/Assets/styles/CardSlider.scss
+++ b/src/Assets/styles/CardSlider.scss
@@ -165,8 +165,8 @@
   }
 }
 
-@media (max-width: 768px) {
-  .custom-splide .splide__arrow {
-    display: none;
-  }
-}
+// @media (max-width: 768px) {
+//   .custom-splide .splide__arrow {
+//     display: none;
+//   }
+// }
