fix tems logo position and remove bg image and added new content on teams page

--- a/src/App.css
+++ b/src/App.css
@@ -512,6 +512,9 @@ aside {
   .watch-img {
     width: 67vw;
   }
+  .teams-logo{
+    height: 36rem !important;
+  }
   .live-head {
     width: 67vw;
     border: 1px solid;
@@ -645,6 +648,9 @@ aside {
   }
   .dash-header {
     height: 10vh !important;
+  }
+  .teams-logo{
+    height: 20rem !important;
   }
 }
 
@@ -782,7 +788,10 @@ aside {
 }
 @media screen and (max-width: 765px) {
   .dash-header {
-    height: 20vh !important;
+    height: 36vh !important;
+  }
+  .text-height{
+    height:  33vh !important;
   }
   .skeleton-loading {
     width: 90% !important;
@@ -807,12 +816,19 @@ aside {
     display: flex;
     flex-direction: column;
   }
+
+  .text-height{
+   height:  43vh !important;
+  }
   .score-card {
     min-width: 330px;
     height: 200px;
   }
   .main-home-page {
     height: 71rem !important;
+  }
+  .dash-header {
+    height: 34vh !important;
   }
 
   .cardd {
@@ -1312,6 +1328,9 @@ aside {
   /* .mbl-slider-bg-color {
     height: 16rem;
   } */
+  .teams-logo{
+    height: 50vh !important;
+  }
 
   .watch-img {
     height: 30vh !important;
@@ -1397,6 +1416,9 @@ aside {
     margin-top: -75px;
 
     left: -2%;
+  }
+  .teams-logo{
+    height: 20rem !important;
   }
 }
 @media screen and (max-width: 380px) {
@@ -2323,6 +2345,9 @@ aside {
   .input-2 {
     width: 26% !important;
   } */
+  .teams-logo{
+    height: 35rem !important;
+  }
 }
 @media screen and (max-width: 2400px) {
   .input-1 {
@@ -2533,6 +2558,9 @@ aside {
   .input-box {
     bottom: 10px !important;
   }
+  .teams-logo{
+    height: 26rem !important;
+  }
 }
 @media screen and (max-width: 1300px) {
   .chat-box-height {
@@ -2648,6 +2676,9 @@ aside {
   .msg-text {
     width: 170px !important;
     font-size: 12px;
+  }
+  .teams-logo{
+    height: 22rem !important;
   }
 }
 @media screen and (max-width: 1120px) {
@@ -2790,6 +2821,9 @@ aside {
   }
   .mbl-chat-font {
     font-size: 12px !important;
+  }
+  .teams-logo{
+    height: 20rem !important;
   }
 }
 @media screen and (max-width: 400px) {
